fabric/testdata/out/ing_spp-homer-put-api-supplier-products-id-rl-service-stupsbeatbackendlegacystaging-spp-homer-master-368.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\",
      \"spp-homer.write\") -\u003e clusterClientRatelimit(\"spp-homer_api-supplier-products-id_PUT_stups_beat-backend-legacy-staging\",
      10000, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/supplier-products/:id\") \u0026\u0026 Method(\"PUT\") \u0026\u0026
      JWTPayloadAllKV(\"sub\", \"stups_beat-backend-legacy-staging\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"3929699d-cba0-11e8-90e2-0618dc6898fa","deployment-id":"d-nq71pi3pjq8siqfx3i5toz322","pipeline-id":"l-o49bo3978wd8mgk5o73i8aim6"},"name":"spp-homer-put-api-supplier-products-id-rl-service-stupsbeatbackendlegacystaging-spp-homer-master-368","namespace":"default"},"spec":{"rules":[{"host":"spp-homer-master-368.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-homer-master-368","servicePo [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "spp-homer.write") -> clusterClientRatelimit("spp-homer_api-supplier-products-id_PUT_stups_beat-backend-legacy-staging",
      10000, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(4) && Path("/api/supplier-products/:id")
      && Method("PUT") && JWTPayloadAllKV("sub", "stups_beat-backend-legacy-staging")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-10-28T16:03:15Z"
  generation: 1
  labels:
    controller-uid: 3929699d-cba0-11e8-90e2-0618dc6898fa
    deployment-id: d-nq71pi3pjq8siqfx3i5toz322
    pipeline-id: l-o49bo3978wd8mgk5o73i8aim6
  name: spp-homer-put-api-supplier-products-id-rl-service-stupsbeatbackendlegacystaging-spp-homer-master-368
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-homer
    uid: 3929699d-cba0-11e8-90e2-0618dc6898fa
  resourceVersion: "1379113378"
  uid: 84ec4aee-230c-4fbb-884e-1ccc01d306d1
spec:
  rules:
  - host: spp-homer-master-368.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-homer-master-368
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
